--- a/style.css
+++ b/style.css
@@ -2,7 +2,37 @@ body {
 	background: #FFDBBB;
 }
 
-#home {
+.homepage {
+	border: 5px solid black;
+	border-radius: 10px;
+	background-color: gold;
+	margin: 0px auto;
+}
+.homepage li a {
+	text-decoration: none;
+	color: #000000;
+	display: block;
+	border: 10px solid blue;
+	border-radius: 10px;
+	background-color: hsla(0, 100%, 50%, 50%);
+	padding: 30px;
+	margin: 50px auto;
+	text-align: center;
+	width: 75vw;
+	height: 1em;
+	font-size: 30px;
+	font-family: "Times New Roman", serif;
+}
+
+.homepage li a:hover {
+	background-color: hsla(120, 75%, 50%, 75%);
+}
+
+
+
+
+
+.home {
 	border: 3px outset black;
 	background-color: rgba(255, 0, 0, 50%);
 	padding: 4px;
@@ -11,27 +41,34 @@ body {
 	margin-left: 4px;
 }
 
-#home:hover {
+.home:hover {
 	background-color: rgba(0, 100, 100, 50%);
 }
 
 .description, .instructions, .ingredients, .title {
-	border: thin solid black;
+	border: medium solid black;
 	padding: 10px 8px;
 	margin: 20px auto;
-}
-
-.title{
-	background-color: gold;
-}
-
-.title p, .title .header {
-	text-align: center;
 }
 
 .header {
 	text-decoration: underline;
 	color: purple;
+	font-family: "Arial", sans-serif;
+
+}
+
+
+
+
+
+.title {
+	background-color: gold;
+	font-family: "Helvetica", sans-serif;
+}
+
+.title p, .title .header, .homepage .header {
+	text-align: center;
 }
 
 .main-image {
@@ -48,15 +85,17 @@ body {
 
 .description {
 	background-color: lightblue;
+	font-family: "Georgia", serif;
 }
 
 .description span {
 	font-weight: 700px;
-	background-color: yellow;
+	background-color: #FFFF0055;
 	display: block;
 	text-align: center;
 	width: 25vw;
 	margin: 0px auto;
+	border: thin solid black;
 }
 
 
@@ -64,14 +103,15 @@ body {
 
 .ingredients {
 	background-color: lightgreen;
+	font-family: "Tahoma", sans-serif;
 }
 
 .ingredients .list i {
 	color: blue;
+	font-size: 0.8em;
 }
 
 .ingredients h3 {
-	font-family: "Courier New" monospace;
 	font-size: 1.1em;
 }
 
@@ -81,11 +121,12 @@ body {
 
 .instructions {
 	background-color: pink;
+	font-family: "Times New Roman", serif;
 }
 
 .instructions .list li {
 	border-style: dashed solid;
-	border-color: red;
+	border-color: green;
 	border-width: 0px 3px 2px 1px;
 }
 
